--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -12,11 +12,15 @@
 }
 
 #logo img{
-  width:100%;
-  height: 100%;
+  width:200px;
+  height: 200px;
+ position: absolute;
+ left: 0;
 }
 
 #links {
+  position: relative;
+  top: 60px;
   display: flex;
   align-items: center;
   margin-left: auto; /* push the links to the right */
@@ -28,7 +32,7 @@
   margin-right: 20px; /* add some space between the links */
 }
 
-#links a:hover {
+#links button:hover {
   color: white;
   background-color: red;
   transition: background-color 0.2s ease-in-out;
